force-app/main/default/objects/Generic_Case_KPI__c/Generic_Case_KPI__c.object-meta.xml
<CustomObject>
    <label>Generic Case KPI</label>
    <nameField>
        <displayFormat>GKPI-{0000000000}</displayFormat>
        <label>Generic Case KPI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Generic Case KPI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>