force-app/main/default/objects/Generic_Case_KPI__c/fields/ActualBooleanValue__c.field-meta.xml
<CustomField>
    <fullName>ActualBooleanValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actual Boolean Value</label>
    <type>Checkbox</type>
</CustomField>