force-app/main/default/objects/Generic_Case_KPI__c/fields/ActualDateTimeValue__c.field-meta.xml
<CustomField>
    <fullName>ActualDateTimeValue__c</fullName>
    <label>Actual DateTime Value</label>
    <type>DateTime</type>
</CustomField>