force-app/main/default/objects/Generic_Case_KPI__c/fields/ActualDecimalValue__c.field-meta.xml
<CustomField>
    <fullName>ActualDecimalValue__c</fullName>
    <label>Actual Decimal Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>