force-app/main/default/objects/Generic_Case_KPI__c/fields/ActualIntegerValue__c.field-meta.xml
<CustomField>
    <fullName>ActualIntegerValue__c</fullName>
    <label>Actual Integer Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>