force-app/main/default/objects/Generic_Case_KPI__c/fields/ActualStringValue__c.field-meta.xml
<CustomField>
    <fullName>ActualStringValue__c</fullName>
    <label>Actual String Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>