force-app/main/default/objects/Generic_Case_KPI__c/fields/Assessment_Indicator_Definition__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Indicator_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Indicator Definition</label>
    <referenceTo>AssessmentIndicatorDefinition</referenceTo>
    <relationshipLabel>Generic Case KPI</relationshipLabel>
    <relationshipName>Generic_Case_KPI</relationshipName>
    <type>Lookup</type>
</CustomField>