force-app/main/default/objects/Generic_Case_KPI__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Generic Case KPI</relationshipLabel>
    <relationshipName>Generic_Case_KPI</relationshipName>
    <type>Lookup</type>
</CustomField>