force-app/main/default/objects/Generic_Case_KPI__c/fields/ExpectedBooleanValue__c.field-meta.xml
<CustomField>
    <fullName>ExpectedBooleanValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expected Boolean Value</label>
    <type>Checkbox</type>
</CustomField>