force-app/main/default/objects/Generic_Case_KPI__c/fields/ExpectedDateTimeValue__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDateTimeValue__c</fullName>
    <label>Expected DateTime Value</label>
    <type>DateTime</type>
</CustomField>