force-app/main/default/objects/Generic_Case_KPI__c/fields/ExpectedDecimalValue__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDecimalValue__c</fullName>
    <label>Expected Decimal Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>