force-app/main/default/objects/Generic_Case_KPI__c/fields/ExpectedIntegerValue__c.field-meta.xml
<CustomField>
    <fullName>ExpectedIntegerValue__c</fullName>
    <label>Expected Integer Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>