force-app/main/default/objects/Generic_Case_KPI__c/fields/ExpectedStringValue__c.field-meta.xml
<CustomField>
    <fullName>ExpectedStringValue__c</fullName>
    <label>Expected String Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>