force-app/main/default/objects/Generic_Case_KPI__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Generic Case KPI</relationshipLabel>
    <relationshipName>Generic_Case_KPI</relationshipName>
    <type>Lookup</type>
</CustomField>