force-app/main/default/objects/Generic_Case_KPI__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <label>SerialNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>