force-app/main/default/objects/Generic_Case_KPI__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sample Device Handover</fullName>
            </value>
            <value>
                <fullName>Loan Device Handover</fullName>
            </value>
            <value>
                <fullName>Trial Device Handover</fullName>
            </value>
            <value>
                <fullName>Trial Device Return</fullName>
            </value>
            <value>
                <fullName>Loan Device Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>