force-app/main/default/objects/Generic_Case_KPI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SerialNumber__c</columns>
    <columns>Case__c</columns>
    <columns>Product__c</columns>
    <columns>Assessment_Indicator_Definition__c</columns>
    <columns>Type__c</columns>
    <columns>ActualBooleanValue__c</columns>
    <columns>ActualIntegerValue__c</columns>
    <columns>ActualStringValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>